--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
 <body>
     <div>
+        <p align="center">
+            <a href="https://arte0s.github.io/zoox">
+                <a href="https://arte0s.github.io/zoox"><img src="https://arte0s.github.io/zoox/logo.svg" width="220"
+                        height="116" alt="Zoox logo"></a>
+            </a>
+        </p>
+
         ZooxJS is a tiny framework for single file components
     </div>
 </body>
