--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         </p>
 
         ZooxJS is a tiny framework for single file components
+
+        <h2>Examples:</h2>
+        <ol><a href="https://arte0s.github.io/zoox/demo/test-button.html">Demo buttons</a></ol>
+        <ol><a href="https://arte0s.github.io/zoox/demo/test-buttons.html">Demo buttons block (complex control)</a></ol>
+        <ol><a href="https://arte0s.github.io/zoox/demo/test-checkbox.html">Demo checkbox</a></ol>
+        <ol><a href="https://arte0s.github.io/zoox/demo/test-list.html">Demo list</a></ol>
+        <ol><a href="https://arte0s.github.io/zoox/demo/test-modals.html">Demo modal</a></ol>
+        <ol><a href="https://arte0s.github.io/zoox/demo/test-page.html">Demo page</a></ol>
+        <ol><a href="https://arte0s.github.io/zoox/demo/test-navbar.html">Demo navbar</a></ol>
     </div>
 </body>
 
