--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
         ZooxJS is a tiny framework for single file components
 
         <h2>Examples:</h2>
-        <ol><a href="https://arte0s.github.io/zoox/demo/test-button.html">Demo buttons</a></ol>
-        <ol><a href="https://arte0s.github.io/zoox/demo/test-buttons.html">Demo buttons block (complex control)</a></ol>
-        <ol><a href="https://arte0s.github.io/zoox/demo/test-checkbox.html">Demo checkbox</a></ol>
-        <ol><a href="https://arte0s.github.io/zoox/demo/test-list.html">Demo list</a></ol>
-        <ol><a href="https://arte0s.github.io/zoox/demo/test-modals.html">Demo modal</a></ol>
-        <ol><a href="https://arte0s.github.io/zoox/demo/test-page.html">Demo page</a></ol>
-        <ol><a href="https://arte0s.github.io/zoox/demo/test-navbar.html">Demo navbar</a></ol>
+
+        <ul>
+            <li><a href="https://arte0s.github.io/zoox/demo/test-button.html">Demo buttons</a></li>
+            <li><a href="https://arte0s.github.io/zoox/demo/test-buttons.html">Demo buttons block (complex control)</a>
+            </li>
+            <li><a href="https://arte0s.github.io/zoox/demo/test-checkbox.html">Demo checkbox</a></li>
+            <!-- <li><a href="https://arte0s.github.io/zoox/demo/test-list.html">Demo list</a></li>
+            <li><a href="https://arte0s.github.io/zoox/demo/test-modals.html">Demo modal</a></li>
+            <li><a href="https://arte0s.github.io/zoox/demo/test-page.html">Demo page</a></li>
+            <li><a href="https://arte0s.github.io/zoox/demo/test-navbar.html">Demo navbar</a></li> -->
+        </ul>
     </div>
 </body>
 
