--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             </a>
         </p>
 
-        ZooxJS is a tiny framework for single file components
+        <p>
+            ZooxJS is a tiny framework for single file components
+        </p>
 
         <h2>Examples:</h2>
 
@@ -36,6 +38,10 @@
             <li><a href="https://arte0s.github.io/zoox/demo/test-page.html">Demo page</a></li>
             <li><a href="https://arte0s.github.io/zoox/demo/test-navbar.html">Demo navbar</a></li> -->
         </ul>
+
+        <p align="center">
+            <a href="https://github.com/arte0s/zoox"><img src="GitHub-Mark-32px.png"></a>
+        </p>
     </div>
 </body>
 
