--- a/demo/test-buttons.html
+++ b/demo/test-buttons.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- <link rel="stylesheet" type="text/css" href="./css/app.css"> -->
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    
     <script src="../src/zoox.js"></script>
 
     <script>
