--- a/demo/controls/z-modal.html
+++ b/demo/controls/z-modal.html
@@ -12,7 +12,7 @@
             height: 100%;
             z-index: 999;
             overflow: auto;
-            background-color: rgba(0, 0, 0, 0.2);
+            background-color: var(--clr-btn-disabled);
         }
 
         .modal-window {
