--- a/demo/test-checkbox.html
+++ b/demo/test-checkbox.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-    <link rel="stylesheet" type="text/css" href="../css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/demo.css">
 
     <style>
         body {
@@ -31,7 +31,7 @@
 
     <script>
         zoox.init({
-            path: '../controls/',
+            path: './controls/',
             langs: ['ru', 'en'],
             debug: 'none',
             init: base => {
@@ -52,7 +52,7 @@
     </script>
 </head>
 
-<body class="colors-dark">
+<body class="schema-light">
     <z type="checkbox" id="cb1">Checkbox one</z>
     <z type="checkbox" id="cb2">Checkbox two</z>
 </body>
