--- a/demo/test-navbar.html
+++ b/demo/test-navbar.html
@@ -6,8 +6,7 @@
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="./css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/demo.css">
 
     <style>
         .navbar {
@@ -45,8 +44,8 @@
                 let x1 = 11;
                 let x2 = 12;
 
-                base.get().setTitle('{{words-process}} ' + x1 + 
-                ' {{words}} / {{words-complete}} ' + x2 + ' {{words}}');
+                base.get().setTitle('{{words-process}} ' + x1 +
+                    ' {{words}} / {{words-complete}} ' + x2 + ' {{words}}');
             }
         });
     </script>
