--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
         </p>
 
         <p>
-            ZooxJS is a tiny framework for single file components
+            Zoox is a tiny framework for single file components
         </p>
 
         <h2>Examples:</h2>
 
         <ul>
             <li><a href="https://arte0s.github.io/zoox/demo/test-button.html">Demo buttons</a></li>
-            <li><a href="https://arte0s.github.io/zoox/demo/test-buttons.html">Demo buttons block (complex control)</a>
-            </li>
-            <li><a href="https://arte0s.github.io/zoox/demo/test-checkbox.html">Demo checkbox</a></li>
+            <li><a href="https://arte0s.github.io/zoox/demo/test-checkbox.html">Demo checkboxs</a></li>
             <li><a href="https://arte0s.github.io/zoox/demo/test-modals.html">Demo modal</a></li>
         </ul>
 
