--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul>
             <li><a href="https://arte0s.github.io/zoox/demo/test-button.html">Demo buttons</a></li>
             <li><a href="https://arte0s.github.io/zoox/demo/test-checkbox.html">Demo checkboxs</a></li>
-            <li><a href="https://arte0s.github.io/zoox/demo/test-modals.html">Demo modal</a></li>
+            <li><a href="https://arte0s.github.io/zoox/demo/test-modal.html">Demo modal</a></li>
         </ul>
 
         <p align="center">
