--- a/demo/test-button.html
+++ b/demo/test-button.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport"
-        content="user-scalable=0 initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <link rel="stylesheet" type="text/css" href="css/demo.css">
 
