--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </blockquote>
     <h3 id="example">Live demo</h3>
     <ul>
-        <li><a href="https://arte0s.github.io/zoox/demo/test-button.html">Buttons demo</a></li>
+        <li><a href="https://arte0s.github.io/zoox/demo/test-button.html">i18n demo</a></li>
+        <li><a href="https://arte0s.github.io/zoox/demo/test-lazy-init.html">Lazy init demo</a></li>
         <li><a href="https://arte0s.github.io/zoox/demo/test-checkbox.html">Checkboxes demo</a></li>
         <li><a href="https://arte0s.github.io/zoox/demo/test-modal.html">Modal window demo</a></li>
     </ul>
@@ -33,6 +34,7 @@
         <li>No dependencies<br /></li>
         <li>Control inheritance and encapsulation<br /></li>
         <li>Built-in internationalization</li>
+        <li>Lazy initialization<br /></li>
     </ul>
     <h2 id="api">API</h2>
     <h3 id="main-api-global-functions">Main API (global functions)</h3>
