--- a/demo/controls/z-modal.html
+++ b/demo/controls/z-modal.html
@@ -25,12 +25,12 @@
     <script>
         let fn;
 
-        zxBase.onInit = () => {
+        zxBase.setInitHandler(() => {
 
             zxBase.getHTML().children[0].addEventListener("click", e => {
                 if (fn) fn(e);
             });
-        };
+        });
 
         zxBase.setHandler = f => fn = f;
     </script>
