--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <li><code>hide</code> - Remove control from the DOM<br /></li>
         <li><code>setText</code> - Set texts for text element (for i18n)<br /></li>
         <li><code>refreshTexts</code> - Refresh texts for text elements<br /></li>
+        <li><code>setInitHandler</code> - Set handler fot initializition event<br /></li>
+        <li><code>setLazyHandler</code> - Set handler fot child lazy initializition event<br /></li>
         <li><code>setDisplayHandler</code> - Set handler fot displaye event<br /></li>
         <li><code>setHideHandler</code> - Set handler fot hide event<br /></li>
         <li><code>create</code> - Create new control<br /></li>
