--- a/demo/test-lazy-init.html
+++ b/demo/test-lazy-init.html
@@ -57,7 +57,7 @@
 
 <body class="schema-light">
     <z type="button" id="btn1">Button 1</z>
-    <z type="button" id="btn2" class="error" z-hide>Button 2</z>
+    <z type="button" id="btn2" class="error" z-lazy>Button 2</z>
 </body>
 
 </html>
