Gradual list loading demo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="https://arte0s.github.io/zoox/demo/test-lazy-init.html">Lazy init demo</a></li>
         <li><a href="https://arte0s.github.io/zoox/demo/test-checkbox.html">Checkboxes demo</a></li>
         <li><a href="https://arte0s.github.io/zoox/demo/test-modal.html">Modal window demo</a></li>
+        <li><a href="https://arte0s.github.io/zoox/demo/test-list-endless.html">Gradual list loading</a></li>
     </ul>
     <h2 id="goals-features">Goals &amp; Features</h2>
     <ul>
