--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         </a>
     </p>
 
-
     <h1 id="zoox.js">zoox.js</h1>
     <blockquote>
         <p>ZooxJS is a tiny framework for single file components</p>
@@ -27,7 +26,7 @@
         <li><a href="https://arte0s.github.io/zoox/demo/test-lazy-init.html">Lazy init demo</a></li>
         <li><a href="https://arte0s.github.io/zoox/demo/test-checkbox.html">Checkboxes demo</a></li>
         <li><a href="https://arte0s.github.io/zoox/demo/test-modal.html">Modal window demo</a></li>
-        <li><a href="https://arte0s.github.io/zoox/demo/test-list-endless.html">Gradual list loading</a></li>
+        <li><a href="https://arte0s.github.io/zoox/demo/test-list.html">List demo</a></li>
     </ul>
     <h2 id="goals-features">Goals &amp; Features</h2>
     <ul>
