--- a/demo/test-list.html
+++ b/demo/test-list.html
@@ -3,46 +3,56 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport"
-        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/demo.css">
 
     <style>
-        .page {
-            height: 100%;
-            background-color: #8EC6B6;
-            overflow-y: auto;
+        .container {
+            width: 200px;
+            height: 400px;
+            border: 1px solid black;
         }
     </style>
 
-    <script src="js/dict/verbs.js"></script>
-    <script src="js/zoox.js"></script>
+    <script src="../src/zoox.js"></script>
 
     <script>
         zoox.init({
-            path: 'zoox',
-            init: base => {
+            path: './controls/',
+            langs: ['ru', 'en'],
+            debug: 'none',
+            init: zxBase => {
+
+                const data = [];
+                for (let i = 0; i < 500; i++)
+                    data.push(Object.freeze({
+                        ind: i,
+                        text: 'item' + i
+                    }));
 
                 const fillListItem = (data, ind, item) => {
 
-                    item.setNumber(ind);
-                    item.setWord(data.w);
-                    item.setCount(99);
-                    item.setTranslate(data.tl.join(', '));
+                    item.setCaption(data.text);
+                    item.setHandler(() => {
+                        alert('Hello world!');
+                    });
                 };
 
-                base.get('list').setContent(VERBS, fillListItem);
+                zxBase.get('list-control').setContent(data, fillListItem);
             }
         });
     </script>
 </head>
 
-<body class="colors-dark">
-    <div class="page">
-        <z type="list" id="list">
-            <z type="list-item" id="list-item"></z>
+<body class="schema-light">
+    
+    <h1>List demo</h1>
+    <p>List of 500 button controls with gradual loading</p>
+
+    <div class="container">
+        <z type="list" id="list-control">
+            <z type="button" id="button-control">Button 1</z>
         </z>
     </div>
 </body>
