Refresh content of list control & rename lazy init function

--- a/demo/controls/z-list.html
+++ b/demo/controls/z-list.html
@@ -42,29 +42,25 @@
     </style>
 
     <script>
-        //TODO: Сейчас вызывается только один раз! Сделать возможность удаления старого контента
-        //Чтобы обновить инфу (без удаления старого), вызывающая функция должна заполмнить связку 
-        //data<->item, и при изменении data, обновлять соответсвующий item
-
-        const partSize = 25;
-        const sizeRatio = 4;
+        const partSize = 10;
+        const maxLoaded = partSize * 4;
         const deltaSize = 500; //Bottom marging of list + border must be < deltaSize
 
-        const items = [];
+        const content = [];
 
         let fillFn;
         let loadedFrom = 0;
         let loadedTo = -1;
         let sampleElem;
 
-        const getItemFunc = (item, ind) => zxContr => {
+        const getItemFunc = (cn, ind) => zxContr => {
 
-            item.zxContr = zxContr;
-            fillFn(item.data, ind, zxContr);
+            cn.item.set(zxContr);
+            fillFn(cn.data, ind, zxContr);
         };
 
         const normalize = p => p < 0 ? 0 :
-            p > items.length - 1 ? items.length - 1 : p;
+            p > content.length - 1 ? content.length - 1 : p;
 
         const createPart = (fr, to, pos) => {
 
@@ -74,7 +70,7 @@
             to = normalize(to);
 
             for (let i = fr; i <= to; i++)
-                zxBase.copy(sampleElem.getId(), getItemFunc(items[i], i), pos++);
+                zxBase.copy(sampleElem.getId(), getItemFunc(content[i], i), pos++);
 
             if (to > loadedTo)
                 loadedTo = to;
@@ -92,8 +88,8 @@
             for (let i = fr; i <= to; i++) {
 
                 //TODO: Надо удалять все дочерние контролы!
-                items[i].zxContr.free();
-                items[i].zxContr = null;
+                content[i].item.get().free();
+                content[i].item.set(null);
             }
 
             if (fr === loadedFrom)
@@ -102,37 +98,37 @@
                 loadedTo = fr - 1;
         };
 
-        const isMaxExceeded = () => items.filter(it => !!it.zxContr).length > partSize * sizeRatio;
+        const isMaxExceeded = () => content.filter(d => !!d.item.get()).length > maxLoaded;
 
         const log = direct => console.log('[' + direct + ']', 'loaded:', loadedTo - loadedFrom + 1,
             'loadedFr: ', loadedFrom, 'loadedTo: ', loadedTo);
 
-        const loadDown = () => {
+        const loadDown = pSize => {
 
             //All is loaded
-            if (loadedTo >= items.length - 1) return;
+            if (loadedTo >= content.length - 1) return;
 
             if (isMaxExceeded())
-                freePart(loadedFrom, loadedFrom + partSize - 1);
+                freePart(loadedFrom, loadedFrom + pSize - 1);
 
-            createPart(loadedTo + 1, loadedTo + partSize);
+            createPart(loadedTo + 1, loadedTo + pSize);
             log('DOWN');
         };
 
-        const loadUp = () => {
+        const loadUp = pSize => {
 
             //All is loaded
             if (loadedFrom === 0) return;
 
             if (isMaxExceeded())
-                freePart(loadedTo - partSize + 1, loadedTo);
+                freePart(loadedTo - pSize + 1, loadedTo);
 
             //Save scroll position
             const rootEl = zxBase.getHTML().children[1];
             const curScrollPos = rootEl.scrollTop;
             const oldScroll = rootEl.scrollHeight - rootEl.clientHeight;
 
-            createPart(loadedFrom - partSize, loadedFrom - 1, 0);
+            createPart(loadedFrom - pSize, loadedFrom - 1, 0);
 
             //Restore scroll position            
             const newScroll = rootEl.scrollHeight - rootEl.clientHeight;
@@ -148,25 +144,43 @@
             rElem.addEventListener('scroll', () => {
 
                 if (rElem.scrollTop + rElem.clientHeight > rElem.scrollHeight - deltaSize)
-                    loadDown();
+                    loadDown(partSize);
                 else if (rElem.scrollTop <= deltaSize)
-                    loadUp();
+                    loadUp(partSize);
             });
+        });
+
+        const createItem = (i, d) => Object.freeze({
+            id: zoox.utils.getGuid(), //i,
+            data: d,
+            item: (() => {
+                let zxItem;
+                return Object.freeze({
+                    get: () => zxItem,
+                    set: zx => zxItem = zx
+                });
+            })()
         });
 
         zxBase.setContent = (dt, fn) => {
 
             fillFn = fn;
 
-            dt.forEach(d => items.push(Object.seal({
-                data: d,
-                zxContr: null
-            })));
+            content.length = 0;
+            dt.forEach((d, i) => content.push(createItem(i, d)));
 
             sampleElem = zxBase.getAll()[0];
             sampleElem.hide();
 
-            loadDown();
+            loadDown(maxLoaded);
+        };
+
+        zxBase.getContent = () => content;
+
+        zxBase.refresh = () => {
+
+            freePart(loadedFrom, loadedTo);
+            loadDown(maxLoaded);
         };
     </script>
 </head>
